Change Log for OpenResty

0.3.15 Jul 15 2008
* used the prompt function rather than <STDIN> in Makefile.PL as per Sanko Robinson's suggestion.
* various improvements of OpenResty::Spec::GettingStarted_cn.

0.3.14 Jul 14 2008
* fixed a bug regarding set_user("_global") which breaks creating the first OpenResty account on a fresh Pg.
* now we specify the MaxRows option when calling DBI's selectall_arrayref.
* renamed the Admin API to Unsafe API.
* introduced the frontend.unsafe and test_suite.test_unsafe options and also disabled the Unsafe API by default.
* added some POD for various classes.
* added a new POD document OpenResty::Tutorial::GetttingStarted_cn.

0.3.13 Jul 11 2008
* now we enclose the stats log generation code with an eval rather than die the whole fastcgi process.
* added POD to the bin/openresty script.

0.3.12 Jul 10 2008
* now we no longer check the metamodel version when doing upgrade (it was a cycle.)

0.3.11 Jul 10 2008
* fixed a failure when the config option frontend.stats_log_dir is set to an empty string.

0.3.10 Jul 10 2008
* added (basic) POD docs to most of the .pm files.
* added the OpenResty::Spec::TestSuite document.
* added the OpenResty::Spec::Installation document.
* added the OpenResty::Spec::AccountAdmin document.
* added the OpenResty::Spec::Upgrading document (for real this time).

0.3.9 Jul 9 2008
* added the OpenResty::Spec::Upgrading document.
* now we check if the version of the metamodel is up-to-date during server startup.

0.3.8 Jul 9 2008
* now we can update a col's default back to null and empty strings.
* allowed type ltree in model columns.
* added a new config option frontend.stats_log_dir.
* now we cache has_role as well as the role's login method
* added naive support for the unique key in column spec while creating models.
* now we check unrecognized keys in column spec while creating models
* added 34-unique.t and its pgmocked data
* now "trivial" cache gets completely disabled in recording mode or pgmocked mode